--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,9 @@ body {
 }
 
 header {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.5);
     height: 15vh;
     width: 100%;
-    opacity: 0.5;
     justify-content: space-evenly;
     align-items: center;
 }
@@ -25,12 +24,43 @@ nav ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #0A1117;
+    background-color: rgba(0, 0, 0, 0);
     font-size: 45px;
-    
+    gap: 40px;
 }
+
+.introduction {
+    color: #dddddd;
+}
+
+.home {
+    color: #7d5ba6;
+}
+
+.about {
+    color: #ACFCD9;
+    padding-right: 50px;
+}
+
+.contact {
+    color: #55D6BE;
+    padding-right: 50px;
+}
+
+.work {
+    color: #FC6471;
+    padding-right: 30px;
+}
+
+ul li a {
+    display: block;
+    background-color: none;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }  
 
 nav ul li a:hover {
     background-color: darkgray;
-    border-radius: 10px;
+    border-radius: 40px;
 }
