--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,29 @@
 * {
     margin: 0px;
     padding: 0px;
-    display: flex;
+    
 }
 
 body {
     background-image: url(../img/achtergrond5.webp);
     height: 100vh;
     width: 100%;
+
 }
 
 header {
     background-color: rgba(0, 0, 0, 0.5);
     height: 15vh;
     width: 100%;
+    display: flex;
+    flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
 }
 
 nav ul {
+    display: flex;
+    flex-direction: row;
     font-family: 'Nico Moji';
     list-style-type: none;
     margin: 0;
@@ -63,4 +68,18 @@ ul li a {
 nav ul li a:hover {
     background-color: darkgray;
     border-radius: 40px;
+}
+
+.stuk1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 70px;
+    font-family: 'Nico Moji';
+    font-size: 40px;
+    color: #dddddd;
+}
+
+p {
+    padding-top: 80px;
 }
