--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@ nav ul {
 
 ul li a {
     display: block;
-    background-color: none;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -366,6 +365,12 @@ footer {
     color: #dddddd;
     font-family: 'Nico Moji';
     font-size: 20px;
+    width: 310px;
+    height: 30px;
+}
+
+.grotebox input {
+    height: 130px;
 }
 
 ::placeholder {
@@ -440,3 +445,4 @@ footer {
 .kleinepaddingruimte {
     padding-bottom: 20px;
 }
+
